Bug 516133 - ARIA treegrid role on HTML:table makes thead/tbody accessible, r=marcoz, davidb