accessible/tests/mochitest/table.js
@@ -37,12 +37,14 @@ const kTreeColumnHeader = 2;
  *                          arranged into the list.
  * @param  aCaption        [in] caption text if any
  * @param  aSummary        [in] summary text if any
+ * @param  aIsTreeTable    [in] specifies whether given table is tree table
  */
 function testTableStruct(aIdentifier, aCellsArray, aColHeaderType,
-                         aCaption, aSummary)
+                         aCaption, aSummary, aIsTreeTable)
 {
   var tableNode = getNode(aIdentifier);
   var isGrid = tableNode.getAttribute("role") == "grid" ||
+    tableNode.getAttribute("role") == "treegrid" ||
     tableNode.localName == "tree";
 
   var rowCount = aCellsArray.length;
@@ -50,7 +52,7 @@ function testTableStruct(aIdentifier, aCellsArray, aColHeaderType,
 
   // Test table accessible tree.
   var tableObj = {
-    role: ROLE_TABLE,
+    role: aIsTreeTable ? ROLE_TREE_TABLE : ROLE_TABLE,
     children: []
   };
 
